--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,9 +6,9 @@ server:
 #    timeout:
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/shop_au?useSSL=false
-    username: root
-    password: lqbaobao365
+    url: jdbc:mysql://us-cdbr-iron-east-05.cleardb.net/heroku_ef8b13d33be2d76?useSSL=false
+    username: b4bbd900347931
+    password: de0d5e10
     driver-class-username: com.mysql.jdbc.Driver
   thymeleaf:
     prefix: classpath:/static/
