--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,10 +6,14 @@
 ##    timeout:
 spring:
   datasource:
-    url: jdbc:mysql://us-cdbr-iron-east-05.cleardb.net:3306/heroku_6469a221573369a?reconnect=true&?useSSL=false
-    username: b04705524280f6
-    password: 1078caa5
+    url: jdbc:mysql://localhost:3306/shop_au?useSSL=false
+    username: root
+    password: lqbaobao365
+#    url: jdbc:mysql://us-cdbr-iron-east-05.cleardb.net:3306/heroku_6469a221573369a?reconnect=true&?useSSL=false
+#    username: b04705524280f6
+#    password: 1078caa5
     driver-class-username: com.mysql.jdbc.Driver
+
   thymeleaf:
     prefix: classpath:/static/
   resources:
